@@ -1,5 +1,11 @@
+include $(top_srcdir)/common.mk
+
 SUBDIRS = 
 
 if HAVE_LIBGLADE
 SUBDIRS += gw
 endif
+
+guilemodule_DATA = glade.scm
+
+EXTRA_DIST = glade.scm
